# SimpleNetworks

./: README.md  de.leopoldluley.SimpleNetworks.json  meson.build
data/: de.leopoldluley.SimpleNetworks.desktop.in  de.leopoldluley.SimpleNetworks.gschema.xml  de.leopoldluley.SimpleNetworks.metainfo.xml.in  de.leopoldluley.SimpleNetworks.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: AccessPointListItem.blp  AccessPointListItem.vala  application.vala  main.vala  meson.build  simple-networks.gresource.xml  styles.css  window.blp  window.ui  window.vala
